--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.5",
-    "uuid": "^8.3.2"
+    "stripe": "^9.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
